--- a/ieee/src/pages/list/list.html
+++ b/ieee/src/pages/list/list.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>constants.listTitle</ion-title>
+    <ion-title>list page</ion-title>
   </ion-navbar>
 </ion-header>
 
