--- a/ieee/src/pages/home/home.html
+++ b/ieee/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>constants.homeTitle</ion-title>
+    <ion-title>Homr page</ion-title>
   </ion-navbar>
 </ion-header>
 
