--- a/ieee/src/pages/new-location/new-location.html
+++ b/ieee/src/pages/new-location/new-location.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>constants.locationTitle</ion-title>
+    <ion-title>Location page</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,4 +16,8 @@
 <ion-content padding>
   <div>{{latitude}}</div>
   <div>{{longitude}}</div>
+  <div id="map_canvas">
+    <button ion-button (click)="onButtonClick($event)">Start demo</button>
+  </div>
+
 </ion-content>
